# stellar-txwatch-core

crates/cli/src/: main.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/rules/src/: lib.rs
