[package]
name    = "txwatch-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
txwatch-rules = { path = "../rules" }
reqwest       = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }

[dev-dependencies]
wiremock      = { workspace = true }
tokio         = { workspace = true }
